--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-intersection-observer": "^9.5.2",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "smooth-scrollbar": "^8.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
